@@ -57,6 +57,12 @@
         if (instance.Array().constructor == Array) {
           // move first iframe to trash
           errored = !!div.appendChild(cache.pop());
+
+          if (HAS_ACTIVEX) {
+            setMode(ACTIVEX_MODE);
+          } else if (HAS_PROTO) {
+            setMode(PROTO_MODE);
+          }
         }
         // Opera 9.5 - 10a throws a security error when calling Array#map or
         // String#lastIndexOf on sandboxed natives created on the file:// protocol.
@@ -102,7 +108,7 @@
         case ACTIVEX_MODE:
           // IE requires the iframe/htmlfile remain in the cache or
           // it will become corrupted
-          (xdoc = new ActiveXObject('htmlfile')).open();
+          xdoc = new ActiveXObject('htmlfile');
           xdoc.write('<script><\/script>');
           xdoc.close();
           cache.push(xdoc);
@@ -112,7 +118,7 @@
           if (!CLEANED_ACTIVEX) {
             CLEANED_ACTIVEX = true;
             if (isHostType(window, 'attachEvent')) {
-              window.attachEvent('onunload', function() { cache.length = 0; });
+              attachEvent('onunload', function() { cache.length = 0 });
             }
           }
           return xdoc.parentWindow;
@@ -135,8 +141,8 @@
             // when served from the file:// protocol as well
             if ('MozOpacity' in doc.documentElement.style &&
                 isHostType(window, 'sessionStorage') &&
-                !window.sessionStorage[key]) {
-              window.sessionStorage[key] = 1;
+                !sessionStorage[key]) {
+              sessionStorage[key] = 1;
               throw new Error;
             }
 
@@ -147,7 +153,7 @@
             parentNode.insertBefore(iframe, parentNode.firstChild);
 
             result = window.frames[name];
-            (xdoc = result.document).open();
+            xdoc = result.document;
             xdoc.write(
               // Firefox 3.5+ glitches when an iframe is inserted and removed,
               // from a page containing other iframes, before dom load.
@@ -155,9 +161,9 @@
               // its content swapped with our iframe. Though the content is swapped,
               // the iframe will persist its `src` property so we check if our
               // iframe has a src property and load it if found.
-              '<script>var g=this,c=function(s){' +
-              '(s=g.frameElement.src)&&g.location.replace(s);' +
-              'if(g.parent.document.readyState!="complete"){g.setTimeout(c,10)}};' +
+              '<script>var c=function(s){' +
+              '(s=frameElement.src)&&location.replace(s);' +
+              'if(parent.document.readyState!="complete"){setTimeout(c,10)}};' +
               'c()<\/script>');
 
             xdoc.close();
@@ -184,7 +190,7 @@
       // the documented method.length value or allow null callbacks.
       var Array, Boolean, Date, Function, Number, Object, RegExp, String, from, reStrict,
        sandbox              = createSandbox(),
-       filterCallback       = function(value) { return value != null; },
+       filterCallback       = function(value) { return value != null },
        glFunction           = window.Function,
        isProtoMode          = MODE == PROTO_MODE,
        isArrayChainable     = sandbox.Array().constructor !== window.Array,
@@ -205,71 +211,65 @@
        __Object             = sandbox.Object,
        __RegExp             = sandbox.RegExp,
        __String             = sandbox.String,
-       __concat             = arrPlugin.concat = arrPlugin.concat,
-       __every              = arrPlugin.every = arrPlugin.every,
-       __filter             = arrPlugin.filter = arrPlugin.filter,
-       __join               = arrPlugin.join = arrPlugin.join,
-       __indexOf            = arrPlugin.indexOf = arrPlugin.indexOf,
-       __lastIndexOf        = arrPlugin.lastIndexOf = arrPlugin.lastIndexOf,
-       __map                = arrPlugin.map = arrPlugin.map,
-       __push               = arrPlugin.push = arrPlugin.push,
-       __reverse            = arrPlugin.reverse = arrPlugin.reverse,
-       __slice              = arrPlugin.slice = arrPlugin.slice,
-       __splice             = arrPlugin.splice = arrPlugin.splice,
-       __some               = arrPlugin.some = arrPlugin.some,
-       __sort               = arrPlugin.sort = arrPlugin.sort,
-       __unshift            = arrPlugin.unshift = arrPlugin.unshift,
-       __getDate            = datePlugin.getDate = datePlugin.getDate,
-       __getDay             = datePlugin.getDay = datePlugin.getDay,
-       __getFullYear        = datePlugin.getFullYear = datePlugin.getFullYear,
-       __getHours           = datePlugin.getHours = datePlugin.getHours,
-       __getMilliseconds    = datePlugin.getMilliseconds = datePlugin.getMilliseconds,
-       __getMinutes         = datePlugin.getMinutes = datePlugin.getMinutes,
-       __getMonth           = datePlugin.getMonth = datePlugin.getMonth,
-       __getSeconds         = datePlugin.getSeconds = datePlugin.getSeconds,
-       __getTime            = datePlugin.getTime = datePlugin.getTime,
-       __getTimezoneOffset  = datePlugin.getTimezoneOffset = datePlugin.getTimezoneOffset,
-       __getUTCDate         = datePlugin.getUTCDate = datePlugin.getUTCDate,
-       __getUTCDay          = datePlugin.getUTCDay = datePlugin.getUTCDay,
-       __getUTCFullYear     = datePlugin.getUTCFullYear = datePlugin.getUTCFullYear,
-       __getUTCHours        = datePlugin.getUTCHours = datePlugin.getUTCHours,
-       __getUTCMilliseconds = datePlugin.getUTCMilliseconds = datePlugin.getUTCMilliseconds,
-       __getUTCMinutes      = datePlugin.getUTCMinutes = datePlugin.getUTCMinutes,
-       __getUTCMonth        = datePlugin.getUTCMonth = datePlugin.getUTCMonth,
-       __getUTCSeconds      = datePlugin.getUTCSeconds = datePlugin.getUTCSeconds,
-       __getYear            = datePlugin.getYear = datePlugin.getYear,
-       __toISOString        = datePlugin.toISOString = datePlugin.toISOString,
-       __toJSON             = datePlugin.toJSON = datePlugin.toJSON,
-       __toExponential      = numPlugin.toExponential = numPlugin.toExponential,
-       __toFixed            = numPlugin.toFixed = numPlugin.toFixed,
-       __toPrecision        = numPlugin.toPrecision = numPlugin.toPrecision,
-       __exec               = regPlugin.exec = regPlugin.exec,
-       __charAt             = strPlugin.charAt = strPlugin.charAt,
-       __charCodeAt         = strPlugin.charCodeAt = strPlugin.charCodeAt,
-       __strConcat          = strPlugin.concat = strPlugin.concat,
-       __strIndexOf         = strPlugin.indexOf = strPlugin.indexOf,
-       __localeCompare      = strPlugin.localeCompare = strPlugin.localeCompare,
-       __match              = strPlugin.match = strPlugin.match,
-       __replace            = strPlugin.replace = strPlugin.replace,
-       __search             = strPlugin.search = strPlugin.search,
-       __strSlice           = strPlugin.slice = strPlugin.slice,
-       __substr             = strPlugin.substr = strPlugin.substr,
-       __substring          = strPlugin.substring = strPlugin.substring,
-       __toLowerCase        = strPlugin.toLowerCase = strPlugin.toLowerCase,
-       __toLocaleLowerCase  = strPlugin.toLocaleLowerCase = strPlugin.toLocaleLowerCase,
-       __toLocaleUpperCase  = strPlugin.toLocaleUpperCase = strPlugin.toLocaleUpperCase,
-       __toUpperCase        = strPlugin.toUpperCase = strPlugin.toUpperCase,
-       __trim               = strPlugin.trim = strPlugin.trim,
-       __trimLeft           = strPlugin.trimLeft = strPlugin.trimLeft,
-       __trimRight          = strPlugin.trimRight = strPlugin.trimRight,
-       __split              = strPlugin.split = ''.split,
-       __strLastIndexOf     = strPlugin.lastIndexOf = ''.lastIndexOf;
-
-
-      // define as own methods of arrPlugin
-      arrPlugin.push  = arrPlugin.push;
-      arrPlugin.shift = arrPlugin.shift;
-      arrPlugin.sort  = arrPlugin.sort;
+       __concat             = arrPlugin.concat,
+       __join               = arrPlugin.join,
+       __push               = arrPlugin.push,
+       __reverse            = arrPlugin.reverse,
+       __slice              = arrPlugin.slice,
+       __splice             = arrPlugin.splice,
+       __some               = arrPlugin.some,
+       __sort               = arrPlugin.sort,
+       __unshift            = arrPlugin.unshift,
+       __getDate            = datePlugin.getDate,
+       __getDay             = datePlugin.getDay,
+       __getFullYear        = datePlugin.getFullYear,
+       __getHours           = datePlugin.getHours,
+       __getMilliseconds    = datePlugin.getMilliseconds,
+       __getMinutes         = datePlugin.getMinutes,
+       __getMonth           = datePlugin.getMonth,
+       __getSeconds         = datePlugin.getSeconds,
+       __getTime            = datePlugin.getTime,
+       __getTimezoneOffset  = datePlugin.getTimezoneOffset,
+       __getUTCDate         = datePlugin.getUTCDate,
+       __getUTCDay          = datePlugin.getUTCDay,
+       __getUTCFullYear     = datePlugin.getUTCFullYear,
+       __getUTCHours        = datePlugin.getUTCHours,
+       __getUTCMilliseconds = datePlugin.getUTCMilliseconds,
+       __getUTCMinutes      = datePlugin.getUTCMinutes,
+       __getUTCMonth        = datePlugin.getUTCMonth,
+       __getUTCSeconds      = datePlugin.getUTCSeconds,
+       __getYear            = datePlugin.getYear,
+       __toISOString        = datePlugin.toISOString,
+       __toJSON             = datePlugin.toJSON,
+       __toExponential      = numPlugin.toExponential,
+       __toFixed            = numPlugin.toFixed,
+       __toPrecision        = numPlugin.toPrecision,
+       __exec               = regPlugin.exec,
+       __charAt             = strPlugin.charAt,
+       __charCodeAt         = strPlugin.charCodeAt,
+       __strConcat          = strPlugin.concat,
+       __strIndexOf         = strPlugin.indexOf,
+       __localeCompare      = strPlugin.localeCompare,
+       __match              = strPlugin.match,
+       __replace            = strPlugin.replace,
+       __search             = strPlugin.search,
+       __strSlice           = strPlugin.slice,
+       __substr             = strPlugin.substr,
+       __substring          = strPlugin.substring,
+       __toLowerCase        = strPlugin.toLowerCase,
+       __toLocaleLowerCase  = strPlugin.toLocaleLowerCase,
+       __toLocaleUpperCase  = strPlugin.toLocaleUpperCase,
+       __toUpperCase        = strPlugin.toUpperCase,
+       __split              = window.String().split,
+       __strLastIndexOf     = window.String().lastIndexOf,
+       __every              = arrPlugin.every,
+       __filter             = arrPlugin.filter,
+       __indexOf            = arrPlugin.indexOf,
+       __lastIndexOf        = arrPlugin.lastIndexOf,
+       __map                = IS_MAP_CORRUPT ? window.Array().map : arrPlugin.map,
+       __trim               = strPlugin.trim,
+       __trimLeft           = strPlugin.trimLeft,
+       __trimRight          = strPlugin.trimRight;
 
       instance || (instance = new Klass);
 
@@ -621,7 +621,6 @@
             return __map.call(this, callback || IDENTITY, thisArg);
           };
         } else {
-          if (IS_MAP_CORRUPT) __map = [].map;
           arrPlugin.map = function map(callback, thisArg) {
             var result = __map.call(this, callback || IDENTITY, thisArg);
             return result.length ? Array.fromArray(result) : Array();
@@ -896,10 +895,14 @@
         return String(__toUpperCase.call(this));
       }).raw = __toUpperCase;
 
-      arrPlugin.concat.raw  = __concat;
-      arrPlugin.reverse.raw = __reverse;
-      arrPlugin.slice.raw   = __slice;
-      arrPlugin.splice.raw  = __splice;
+      // define as own methods of arrPlugin
+      arrPlugin.shift = arrPlugin.shift;
+      arrPlugin.sort  = arrPlugin.sort;
+
+      (arrPlugin.concat = arrPlugin.concat).raw = __concat;
+      (arrPlugin.reverse = arrPlugin.reverse).raw = __reverse;
+      (arrPlugin.slice = arrPlugin.slice).raw = __slice;
+      (arrPlugin.splice.raw = arrPlugin.splice.raw) = __splice;
 
 
       /*------------------------- MODIFY PROTOTYPES --------------------------*/
@@ -973,7 +976,7 @@
     // thrown when using iframes to create sandboxes after the document.domain is
     // set (Opera 9.25 is out of luck here).
     if (HAS_ACTIVEX && !isHostType(window, 'XMLHttpRequest') &&
-          window.location && window.location.protocol == 'https:') {
+          window.location && location.protocol == 'https:') {
       setMode(ACTIVEX_MODE);
     }
     // Iframes are the fastest and prefered technique
